# VulkanDemos

./: CMakeLists.txt  README.md
A1_Versuch1c/: A1_Versuch1c.vcxproj  A1_Versuch1c.vcxproj.filters  Versuch1c.cpp  Versuch1c_v2.cpp  imgui.ini
A1_Versuch1c/shaders/: compile.bat  frag.spv  frag_v2.frag  frag_v2.spv  shader.frag  shader.vert  skybox.frag  skybox.vert  skybox_frag.spv  skybox_vert.spv  vert.spv
A1_Versuch1c/x64/Debug/: vc141.idb
A1_Versuch1c/x64/Debug/A1_Versuch1c.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
A1_Versuch1c/x64/Release/A1_Versuch1c.tlog/: A1_Versuch1c.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
A3_Normalenvektoren/: A3_Normalenvektoren.cpp  A3_Normalenvektoren.vcxproj  A3_Normalenvektoren.vcxproj.filters  imgui.ini
A3_Normalenvektoren/shaders/: compile.bat  frag.spv  gouraud_frag.spv  gouraud_shader.frag  gouraud_shader.vert  gouraud_vert.spv  shader.frag  shader.vert  vert.spv
A3_Normalenvektoren/x64/Debug/: vc141.idb
A3_Normalenvektoren/x64/Debug/A3_Norma.1E8D4F3C.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
A3_Normalenvektoren/x64/Release/A3_Norma.1E8D4F3C.tlog/: A3_Normalenvektoren.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
A4_Cubemapping/: VulkanFramework.vcxproj  imgui.ini  main.cpp
A4_Cubemapping/shaders/: compile.bat  scene.frag  scene.vert  scene_frag.spv  scene_vert.spv  skybox.frag  skybox.vert  skybox_frag.spv  skybox_vert.spv
A4_Cubemapping/x64/Debug/: vc141.idb
A4_Cubemapping/x64/Debug/VulkanFramework.tlog/: CL.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
A4_Cubemapping/x64/Release/VulkanFramework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VulkanFramework.lastbuildstate  VulkanFramework.write.1u.tlog  link.command.1.tlog  link.write.1.tlog
A5_PCSS/: KnightModel.cpp  Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini  main.cpp
A5_PCSS/shaders/: compile.bat  frag.spv  lights.frag  lights.vert  lights_frag.spv  lights_vert.spv  shader.frag  shader.vert  shadowmap.frag  shadowmap.vert  shadowmap_frag.spv  shadowmap_vert.spv  vert.spv
A5_PCSS/x64/Debug/: vc141.idb
A5_PCSS/x64/Debug/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
A5_PCSS/x64/Release/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Sandbox.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VulkanFramework/: VulkanFramework.vcxproj.filters  camera.cpp  camera.h  imgui.ini  main.cpp  model.cpp  model.h  vk_layer_settings.txt  vkal_imgui.cpp  vkal_imgui.h
VulkanFramework/x64/Debug/VulkanFramework.tlog/: CL.command.1.tlog  CL.write.1.tlog  VulkanFramework.lastbuildstate
VulkanFramework/x64/Release/VulkanFramework.tlog/: link.read.1.tlog
assets/md2/pknight/.mayaSwatches/: knight_diffuse_cheetos_1024.png.swatch
assets/textures/.mayaSwatches/: sand_diffuse.jpg.swatch
assets/textures/stonepath/.mayaSwatches/: albedo.jpg.swatch  normalmap.jpg.swatch
bump-mapping-demo/: imgui.ini  main.cpp
bump-mapping-demo/shaders/: frag.spv  shader.frag  shader.vert  vert.spv
dependencies/ImageLoaderOriginal/: ImageLoader.cpp
dependencies/imageloader/: CMakeLists.txt  ImageLoader.cpp
dependencies/modelloader/: Model.cpp  Model.h  Readme.txt  Triangle.h  Vector3.h  Vertex.h
hello-world/: imgui.ini  main.cpp
hello-world/shaders/: frag.spv  loading_additional_instance_extensions.txt  shader.frag  shader.vert  vert.spv
rtx-raytracing/: imgui.ini  main.cpp
rtx-raytracing/shaders/: closesthit.rchit  closesthit.rchit.spv  closesthit_debug.rchit  closesthit_debug.rchit.spv  compile.bat  miss.rmiss  miss.rmiss.spv  postprocess.frag  postprocess.spv  postprocess.vert  postprocess_frag.spv  postprocess_vert.spv  rasterizer.frag  rasterizer.vert  rasterizer_frag.spv  rasterizer_vert.spv  raygen.rgen  raygen.rgen.spv  shadowmiss.rmiss  shadowmiss.rmiss.spv
z-fighting-demo/: imgui.ini  main.cpp
z-fighting-demo/shaders/: frag.spv  shader.frag  shader.vert  vert.spv
